--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browse-s3",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A modern S3 file browser with AWS SSO support",
   "author": "Your Name",
   "license": "MIT",
@@ -12,7 +12,8 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"electron .\"",
     "electron:build": "vite build && electron-builder",
-    "electron:preview": "vite preview && electron ."
+    "electron:preview": "vite preview && electron .",
+    "release": "electron-builder --publish always"
   },
   "build": {
     "appId": "com.browse-s3.app",
@@ -25,16 +26,57 @@
       "main.js",
       "preload.js"
     ],
+    "publish": {
+      "provider": "github",
+      "releaseType": "release"
+    },
     "mac": {
       "category": "public.app-category.developer-tools",
-      "target": ["dmg", "zip"]
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        },
+        {
+          "target": "zip",
+          "arch": ["x64", "arm64"]
+        }
+      ],
+      "icon": "build/icon.icns",
+      "darkModeSupport": true
     },
     "win": {
-      "target": ["nsis", "portable"]
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        },
+        {
+          "target": "portable",
+          "arch": ["x64"]
+        }
+      ],
+      "icon": "build/icon.ico"
     },
     "linux": {
-      "target": ["AppImage", "deb"],
-      "category": "Development"
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64"]
+        },
+        {
+          "target": "deb",
+          "arch": ["x64"]
+        }
+      ],
+      "category": "Development",
+      "icon": "build/icon.png"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
     }
   },
   "dependencies": {
@@ -42,6 +84,7 @@
     "@aws-sdk/credential-providers": "^3.0.0",
     "@aws-sdk/s3-request-presigner": "^3.0.0",
     "electron-store": "^8.1.0",
+    "electron-updater": "^6.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -56,5 +99,9 @@
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "vite": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/browse-s3.git"
   }
 }
