--- a/package.json
+++ b/package.json
@@ -1,127 +1,100 @@
 {
-  "name": "browse-s3",
-  "version": "0.0.1",
-  "description": "A modern S3 file browser with AWS SSO support",
-  "author": "Your Name",
-  "license": "MIT",
+  "name": "s3-browser",
+  "private": true,
+  "version": "0.1.0",
   "main": "main.js",
-  "private": false,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "electron:dev": "cross-env NODE_ENV=development concurrently \"vite\" \"electron .\"",
-    "electron:build": "vite build && cross-env NODE_ENV=production electron-builder",
-    "electron:preview": "vite build && cross-env NODE_ENV=production electron .",
-    "release": "vite build && electron-builder --publish always"
-  },
-  "build": {
-    "appId": "com.browse-s3.app",
-    "productName": "BrowseS3",
-    "directories": {
-      "output": "dist_electron"
-    },
-    "files": [
-      "dist/**/*",
-      "main.js",
-      "preload.js"
-    ],
-    "publish": {
-      "provider": "github",
-      "releaseType": "release"
-    },
-    "mac": {
-      "category": "public.app-category.developer-tools",
-      "target": [
-        {
-          "target": "dmg",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
-        },
-        {
-          "target": "zip",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
-        }
-      ],
-      "icon": "build/icon.icns",
-      "darkModeSupport": true
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        },
-        {
-          "target": "portable",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "icon": "build/icon.ico"
-    },
-    "linux": {
-      "target": [
-        {
-          "target": "AppImage",
-          "arch": [
-            "x64"
-          ]
-        },
-        {
-          "target": "deb",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "category": "Development",
-      "icon": "build/icon.png"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
-    }
+    "electron:dev": "cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
+    "start": "concurrently -k \"npm run dev\" \"wait-on tcp:5173 && npm run electron:dev\"",
+    "start:alt": "vite & sleep 2 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.529.1",
-    "@aws-sdk/credential-providers": "^3.529.1",
-    "@aws-sdk/s3-request-presigner": "^3.529.1",
-    "@aws-sdk/client-sso": "^3.529.1",
-    "@aws-sdk/client-sso-oidc": "^3.529.1",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.7",
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/credential-providers": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0",
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.2.0",
+    "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-rpm": "^7.2.0",
+    "@electron-forge/maker-squirrel": "^7.2.0",
+    "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/plugin-vite": "^7.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "concurrently": "^8.2.2",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "electron": "^28.2.3",
-    "electron-builder": "^24.9.1",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^4.5.2"
+    "electron": "^25.0.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
+    "vite": "^4.0.0",
+    "wait-on": "^8.0.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/browse-s3.git"
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "asar": true,
+        "prune": true,
+        "ignore": [
+          "^/src",
+          "^/public",
+          "^/node_modules",
+          "^/dist"
+        ]
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "s3-browser"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ],
+      "plugins": [
+        {
+          "name": "@electron-forge/plugin-vite",
+          "config": {
+            "build": [
+              {
+                "entry": "main.js",
+                "config": "vite.main.config.js"
+              },
+              {
+                "entry": "preload.js",
+                "config": "vite.preload.config.js"
+              }
+            ],
+            "renderer": {
+              "config": "vite.renderer.config.js"
+            }
+          }
+        }
+      ]
+    }
   }
 }
