--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-vite": "^7.8.0",
+    "@electron-forge/plugin-vite": "^7.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
-    "concurrently": "^9.1.2",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^25.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "vite": "^4.0.0",
-    "wait-on": "^8.0.3"
+    "wait-on": "^7.2.0"
   },
   "config": {
     "forge": {
@@ -89,9 +89,15 @@
                 "config": "vite.preload.config.js"
               }
             ],
-            "renderer": {
-              "config": "vite.renderer.config.js"
-            }
+            "renderer": [
+              {
+                "name": "main_window",
+                "config": "vite.renderer.config.js",
+                "preload": {
+                  "config": "vite.preload.config.js"
+                }
+              }
+            ]
           }
         }
       ]
