--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,45 @@
 # Dependencies
-node_modules/
-.pnp/
+node_modules
+.pnp
 .pnp.js
+
+# Build outputs
+.vite/
+dist/
+out/
+build/
 
 # Testing
 coverage/
 
-# Production
-dist/
-dist_electron/
+# Electron forge
 out/
 
-# Misc
-.DS_Store
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
-# Logs
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # Editor directories and files
-.idea/
-.vscode/
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Electron Forge
-out/
+# Vite
+*.local
+.vite/
+*.timestamp-*
