--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "s3-browser",
   "private": true,
   "version": "0.1.0",
-  "main": "main.js",
+  "main": ".vite/build/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "electron:dev": "cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
+    "electron:dev": "cross-env NODE_ENV=development ELECTRON_ENTRY=main.js VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
     "start": "concurrently -k \"npm run dev\" \"wait-on tcp:5173 && npm run electron:dev\"",
     "start:alt": "vite & sleep 2 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
     "package": "electron-forge package",
