--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   build:
-    if: github.ref == 'refs/heads/main'  # Only run on main branch pushes
+    if: github.ref == 'refs/heads/main'  # Only run on main branch
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -43,7 +43,6 @@ jobs:
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')  # Only run on version tags
-    needs: build  # Wait for build to complete
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
