--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "start": "concurrently -k \"npm run dev\" \"wait-on tcp:5173 && npm run electron:dev\"",
     "start:alt": "vite & sleep 2 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,jsx --fix"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
@@ -35,16 +39,22 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-vite": "^7.2.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^25.0.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "vite": "^4.0.0",
+    "vitest": "^1.0.0",
     "wait-on": "^7.2.0"
   },
   "config": {
