Add GitHub publisher and update release workflow
- Introduced @electron-forge/publisher-github dependency in package.json and package-lock.json for GitHub releases.
- Added publish script to package.json for streamlined publishing process.
- Updated GitHub Actions workflow to include permissions for content and package management, and modified the release job to publish builds directly.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -20,18 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build and Package
-        run: npm run make
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            out/**/*.exe
-            out/**/*.dmg
-            out/**/*.deb
-            out/**/*.rpm
-            out/**/*.zip
-            out/**/*.AppImage
+      - name: Build and Publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run publish 
