--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron:dev": "cross-env NODE_ENV=development ELECTRON_ENTRY=main.js VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
-    "start": "concurrently -k \"npm run dev\" \"wait-on tcp:5173 && npm run electron:dev\"",
-    "start:alt": "vite & sleep 2 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
+    "start": "cross-env NODE_ENV=development concurrently -k \"npm run dev\" \"wait-on tcp:5173 && npm run electron:dev\"",
+    "start:alt": "cross-env NODE_ENV=development vite & sleep 2 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext js,jsx --fix"
+    "lint:fix": "eslint . --ext js,jsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx}\"",
+    "release": "standard-version",
+    "postrelease": "git push --follow-tags origin main"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.0.0",
-    "@aws-sdk/credential-providers": "^3.0.0",
-    "@aws-sdk/s3-request-presigner": "^3.0.0",
+    "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/credential-providers": "^3.525.0",
+    "@aws-sdk/s3-request-presigner": "^3.525.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,22 +45,25 @@
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-vite": "^7.2.0",
     "@electron-forge/publisher-github": "^7.8.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.0",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^25.0.0",
+    "electron": "^29.1.0",
+    "electron-reloader": "^1.2.3",
     "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.0.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^24.0.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "vite": "^4.0.0",
-    "vitest": "^1.0.0",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "standard-version": "^9.5.0",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1",
     "wait-on": "^7.2.0"
   },
   "config": {
