Add Monaco-based CodeEditor and update development workflow

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "s3-browser",
   "private": true,
   "version": "0.10.0",
-  "main": ".vite/build/main.js",
+  "main": "main.js",
   "description": "A simple Electron app to browse S3 buckets",
   "license": "MIT",
   "author": {
@@ -13,12 +13,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "electron:dev": "cross-env NODE_ENV=development ELECTRON_ENTRY=main.js VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
-    "start": "cross-env NODE_ENV=development concurrently -k \"npm run dev\" \"wait-on tcp:5173 && npm run electron:dev\"",
-    "start:alt": "cross-env NODE_ENV=development vite & sleep 2 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "electron:dev": "cross-env NODE_ENV=development electron .",
+    "start": "cross-env NODE_ENV=development concurrently -k \"npm run dev\" \"wait-on http://localhost:5173 && npm run electron:dev\"",
+    "start:alt": "cross-env NODE_ENV=development vite & sleep 2 && cross-env NODE_ENV=development electron .",
+    "package": "npm run build && electron-forge package",
+    "make": "npm run build && electron-forge make",
+    "publish": "npm run build && electron-forge publish",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext js,jsx",
@@ -32,6 +32,7 @@
     "@aws-sdk/client-s3": "^3.525.0",
     "@aws-sdk/credential-providers": "^3.525.0",
     "@aws-sdk/s3-request-presigner": "^3.525.0",
+    "@monaco-editor/react": "^4.7.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
