Add development entry point and production build updates

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "s3-browser",
   "private": true,
   "version": "0.10.0",
-  "main": "main.js",
+  "main": ".vite/build/main.js",
   "description": "A simple Electron app to browse S3 buckets",
   "license": "MIT",
   "author": {
@@ -13,12 +13,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "electron:dev": "cross-env NODE_ENV=development electron .",
+    "electron:dev": "cross-env NODE_ENV=development ELECTRON_ENTRY=main.js VITE_DEV_SERVER_URL=http://localhost:5173 electron main.js",
     "start": "cross-env NODE_ENV=development concurrently -k \"npm run dev\" \"wait-on http://localhost:5173 && npm run electron:dev\"",
-    "start:alt": "cross-env NODE_ENV=development vite & sleep 2 && cross-env NODE_ENV=development electron .",
-    "package": "npm run build && electron-forge package",
-    "make": "npm run build && electron-forge make",
-    "publish": "npm run build && electron-forge publish",
+    "start:alt": "cross-env NODE_ENV=development vite & sleep 2 && cross-env NODE_ENV=development electron main.js",
+    "package": "vite build && electron-forge package",
+    "make": "vite build && electron-forge make",
+    "publish": "vite build && electron-forge publish",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext js,jsx",
